<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_marcador"
        android:icon="@drawable/ic_action_triunfos"
        android:title="@string/marcador"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_ajustes"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/ajustes"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info_outline"
        android:title="@string/info"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_salir"
        android:icon="@drawable/ic_action_exit_to_app"
        android:title="@string/salir"
        app:showAsAction="ifRoom|withText" />

</menu>