<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="miJuego" type="com.ahorcado.MiJuego"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pizarra"
            tools:context=".SettingsActivity">

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:text="@string/nivel"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#FFFFFF"
                android:spinnerMode="dropdown"
                android:textAlignment="gravity"
                android:selectedItemPosition="@={miJuego.nivel}"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="90dp"
                android:text="@string/sonido"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3">

            <RadioButton
                    android:id="@+id/rbSonido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/blanco"
                    android:text="@string/on"
                    android:checked="@={miJuego.sonido}"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>

            <RadioButton
                    android:id="@+id/rbMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/blanco"
                    android:text="@string/mute"
                    android:checked="@={!miJuego.sonido}"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>
        </RadioGroup>

        <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="33dp"
                android:text="@string/volver"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="33dp"
                android:text="@string/guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnVolver"/>
    </android.support.constraint.ConstraintLayout>

</layout>