<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MarcadorActivity"
        android:background="@color/pizarra">

    <TextView
            android:text="@string/marcador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            android:fontFamily="@font/tiza" android:textSize="24sp" android:textColor="#FFFFFF"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/triunfos"
            android:contentDescription="@string/marcador"
            android:id="@+id/imageView2" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginEnd="60dp" app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/derrotas"
            android:contentDescription="@string/marcador"
            android:id="@+id/imageView4" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVictorias" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:fontFamily="@font/tiza" android:textColor="#FFFFFF" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toStartOf="@+id/tvDerrotas"/>
    <TextView
            android:text="@string/puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDerrotas"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvVictorias" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:fontFamily="@font/tiza"
            android:textColor="#FFFFFF" app:layout_constraintStart_toEndOf="@+id/tvVictorias"
            android:layout_marginStart="60dp"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="33dp" android:id="@+id/btnReset" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/btnVolver" android:layout_marginEnd="60dp"/>
    <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVolver"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="33dp"
            app:layout_constraintStart_toEndOf="@+id/btnReset"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginStart="60dp"/>
</android.support.constraint.ConstraintLayout>